hotfix: miss subRequest fixed [phamhminhkhoi]